-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.6.1
-
None
-
Tested on Windows (probably any others OS's work the same way and do not have ability to clean the Projects list)
-
8ea32d40515b6aba805cf515b065091182191e1f
Right click is usually used for context menus (or nothing if contect menu is not designed).
This is not how interaction with Projects list in Welcome screen is implemented.
I think that context menu with at least one action "Remove Project from list" is in real need. Imagine you tried to check several examples projects (5-10) and your own projects go far below in the list. There is a need to clean up this Projects list from old or unnecessary items
- relates to
-
QTCREATORBUG-20689 Allow projects to be deleted from project list in Welcome screen
-
- Closed
-