ProjectWelcomePage: Do not open project on right click

And neither sessions; in that case pop up the mini menu, too.

Change-Id: Iea5ed023ab477f4f1e526aa36f9b27f42881b052
Task-number: QTCREATORBUG-20487
Reviewed-by: Eike Ziller <eike.ziller@qt.io>